--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvSeriesTimerPage" data-role="page" class="page libraryPage liveTvPage noSecondaryNavPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvcomponents,scripts/livetvseriestimer,livetvcss,jqmlistview" data-backbutton="true" data-menubutton="false">
+    <div id="liveTvSeriesTimerPage" data-role="page" class="page libraryPage liveTvPage noSecondaryNavPage" data-contextname="${HeaderLiveTv}" data-require="jqmcollapsible,scripts/livetvcomponents,scripts/livetvseriestimer,livetvcss,jqmlistview" data-backbutton="true" data-menubutton="false">
 
         <div data-role="content">
             <form class="liveTvSeriesTimerForm" style="margin: 0 auto; max-width: 720px;">
@@ -44,7 +44,7 @@
                         <paper-checkbox id="chkAnyTime">${OptionRecordAnytime}</paper-checkbox>
                         <paper-checkbox id="chkAllChannels">${OptionRecordOnAllChannels}</paper-checkbox>
                     </div>
-                    <br/>
+                    <br />
                     <div data-role="collapsible" data-mini="true">
                         <h3>${HeaderAdvanced}</h3>
                         <div>
