--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardlibrary.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardlibrary.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardLibraryPage" data-role="page" class="page standalonePage wizardPage mediaLibraryPage" data-require="jqmpopup,scripts/medialibrarypage,scripts/taskbutton,paperbuttonstyle">
+    <div id="wizardLibraryPage" data-role="page" class="page standalonePage wizardPage mediaLibraryPage" data-require="jqmcollapsible,jqmpopup,scripts/medialibrarypage,scripts/taskbutton,paperbuttonstyle">
 
         <div data-role="content">
 
