--- a/MediaBrowser.WebDashboard/dashboard-ui/reports.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/reports.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="libraryReportManagerPage" data-role="page" class="page libraryPage noSecondaryNavPage reportsPage" data-contextname="${HeaderReports}" data-require="jqmcollapsible,jqmtable,scripts/reports,detailtablecss,jqmicons">
+    <div id="libraryReportManagerPage" data-role="page" class="page libraryPage noSecondaryNavPage reportsPage" data-contextname="${HeaderReports}" data-require="jqmpanel,jqmcollapsible,jqmtable,scripts/reports,detailtablecss,jqmicons">
         <div data-role="content">
             <div style="text-align: center;">
                 <div class="viewControls">
