--- a/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-    <div id="itemListPage" data-role="page" class="page libraryPage folderListPage noSecondaryNavPage" data-require="scripts/itemlistpage">
+    <div id="itemListPage" data-role="page" class="page libraryPage folderListPage noSecondaryNavPage" data-require="jqmpanel,scripts/itemlistpage">
         <div class="alphabetPicker">
         </div>
         <div data-role="content" class="itemListContent">
