--- a/MediaBrowser.WebDashboard/dashboard-ui/advanced.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/advanced.html
@@ -78,11 +78,8 @@
                             <br /><br />
                             <ul data-role="listview" class="ulForm">
                                 <li>
-                                    <label for="txtDashboardSourcePath">${LabelDashboardSourcePath}</label>
-                                    <div style="display: inline-block; width: 85%;">
-                                        <input type="text" id="txtDashboardSourcePath" />
-                                    </div>
-                                    <button id="btnSelectDashboardSourcePath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                                    <paper-input type="text" id="txtDashboardSourcePath" label="${LabelDashboardSourcePath}" style="display: inline-block; width: 80%;"></paper-input>
+                                    <paper-icon-button id="btnSelectDashboardSourcePath" icon="search" title="${ButtonSelectDirectory}"></paper-icon-button>
                                     <div class="fieldDescription">${LabelDashboardSourcePathHelp}</div>
                                 </li>
                             </ul>
