--- a/MediaBrowser.WebDashboard/dashboard-ui/autoorganizetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/autoorganizetv.html
@@ -24,14 +24,12 @@
                             <label for="chkEnableTvSorting">${OptionEnableEpisodeOrganization}</label>
                         </li>
                         <li>
-                            <label for="txtWatchFolder">${LabelWatchFolder}</label>
-                            <div style="display: inline-block; width: 85%;">
-                                <input type="text" id="txtWatchFolder" name="txtWatchFolder" />
-                            </div>
-                            <button id="btnSelectWatchFolder" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                            <paper-input id="txtWatchFolder" label="${LabelWatchFolder}" style="width:85%;display:inline-block;"></paper-input>
+                            <paper-icon-button id="btnSelectWatchFolder" icon="search"></paper-icon-button>
                             <div class="fieldDescription">
                                 <div>${LabelWatchFolderHelp}</div>
                             </div>
+                            <br/>
                         </li>
                         <li>
                             <label for="txtMinFileSize">${LabelMinFileSizeForOrganize}</label>
