--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -53,10 +53,10 @@
                         </li>
                         <li>
                             <label for="txtCustomIntrosPath">${LabelCustomIntrosPath}</label>
-                            <div style="display: inline-block; width: 85%;">
-                                <input type="text" id="txtCustomIntrosPath" />
+                            <div>
+                                <input type="text" id="txtCustomIntrosPath" style="display: inline-block; width: 85%;" />
+                                <paper-icon-button id="btnSelectCustomIntrosPath" icon="search"></paper-icon-button>
                             </div>
-                            <button id="btnSelectCustomIntrosPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
                             <div class="fieldDescription">${LabelCustomIntrosPathHelp}</div>
                         </li>
                         <li>
