--- a/MediaBrowser.WebDashboard/dashboard-ui/device.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/device.html
@@ -29,11 +29,8 @@
                                 <div class="fieldDescription">${LabelCustomDeviceDisplayNameHelp}</div>
                             </li>
                             <li id="fldCameraUploadPath" style="display:none;">
-                                <label for="txtUploadPath">${LabelCameraUploadPath}</label>
-                                <div style="display: inline-block; width: 85%;">
-                                    <input type="text" id="txtUploadPath" />
-                                </div>
-                                <button id="btnSelectUploadPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                                <paper-input id="txtUploadPath" label="${LabelCameraUploadPath}" style="width:85%;display:inline-block;"></paper-input>
+                                <paper-icon-button id="btnSelectUploadPath" icon="search"></paper-icon-button>
                                 <div class="fieldDescription">${LabelCameraUploadPathHelp}</div>
                             </li>
 
