--- a/MediaBrowser.WebDashboard/dashboard-ui/devicesupload.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/devicesupload.html
@@ -28,14 +28,11 @@
 
                         </div>
 
-                        <br /><br />
+                        <br />
                         <ul data-role="listview" class="ulForm">
                             <li>
-                                <label for="txtUploadPath">${LabelCameraUploadPath}</label>
-                                <div style="display: inline-block; width: 85%;">
-                                    <input type="text" id="txtUploadPath" />
-                                </div>
-                                <button id="btnSelectUploadPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                                <paper-input id="txtUploadPath" label="${LabelCameraUploadPath}" style="width:84%;display:inline-block;"></paper-input>
+                                <paper-icon-button id="btnSelectUploadPath" icon="search"></paper-icon-button>
                                 <div class="fieldDescription">${LabelCameraUploadPathHelp}</div>
                             </li>
                             <li>
