--- a/MediaBrowser.WebDashboard/dashboard-ui/metadataadvanced.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadataadvanced.html
@@ -21,12 +21,10 @@
 
                     <ul data-role="listview" class="ulForm">
                         <li>
-                            <label for="txtMetadataPath">${LabelMetadataPath}</label>
-                            <div style="display: inline-block; width: 85%;">
-                                <input type="text" id="txtMetadataPath" />
-                            </div>
-                            <button id="btnSelectMetadataPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                            <paper-input id="txtMetadataPath" label="${LabelMetadataPath}" style="width:85%;display:inline-block;"></paper-input>
+                            <paper-icon-button id="btnSelectMetadataPath" icon="search"></paper-icon-button>
                             <div class="fieldDescription">${LabelMetadataPathHelp}</div>
+                            <br/>
                         </li>
                         <li>
                             <label for="chkSaveMetadataHidden">${OptionSaveMetadataAsHidden}</label>
