extract jqm controlgroup

--- a/MediaBrowser.WebDashboard/dashboard-ui/tvpeople.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvpeople.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvPeoplePage" data-role="page" class="page libraryPage" data-require="jqmpanel,scripts/tvpeople">
+    <div id="tvPeoplePage" data-role="page" class="page libraryPage" data-require="jqmcontrolgroup,jqmpanel,scripts/tvpeople">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
             <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
