--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
@@ -122,7 +122,7 @@
                     </h1>
                     <div class="detailSectionContent">
                         <p>${LabelSelectUserViewOrder}</p>
-                        <div class="viewOrderList">
+                        <div class="paperList viewOrderList">
 
                         </div>
                     </div>
