--- a/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvShowsPage" data-role="page" class="page libraryPage" data-require="jqmcontrolgroup,jqmpanel,jqmcollapsible,scripts/tvshows,scripts/queryfilters">
+    <div id="tvShowsPage" data-role="page" class="page libraryPage" data-require="jqmcheckbox,jqmcontrolgroup,jqmpanel,jqmcollapsible,scripts/tvshows,scripts/queryfilters">
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="tvrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
             <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
