--- a/MediaBrowser.WebDashboard/dashboard-ui/userparentalcontrol.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userparentalcontrol.html
@@ -33,7 +33,7 @@
                     <div>
                         <div>
                             <div class="ui-controlgroup-label" style="display:inline-block;">${LabelBlockContentWithTags}</div>
-                            <button type="button" class="btnAddBlockedTag" data-inline="true" data-mini="true" data-iconpos="notext" data-icon="plus" style="vertical-align:middle;margin: -5px 0 0 1em;">${ButtonAdd}</button>
+                            <paper-fab class="btnAddBlockedTag mini" icon="add" title="${ButtonAdd}" style="margin-left:1em;"></paper-fab>
                         </div>
                         <div class="blockedTags" style="margin-top:.5em;">
 
