--- a/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
@@ -12,9 +12,7 @@
                 <div class="detailSectionHeader">
                     <h3 style="margin:.6em 0;">
                         <span style="vertical-align:middle;">${HeaderUsers}</span>
-                        <a data-role="button" data-icon="plus" href="usernew.html" data-inline="true" data-mini="true" data-iconpos="notext" style="margin: 0 .5em; vertical-align:middle;">
-                            ${ButtonAddUser}
-                        </a>
+                        <paper-fab class="btnAddUser mini" icon="add" title="${ButtonAddUser}" style="margin-left:1em;"></paper-fab>
                     </h3>
                 </div>
                 <div class="localUsers" style="text-align:left;margin-top:.5em;"></div>
@@ -22,9 +20,7 @@
                 <div class="detailSectionHeader" style="margin-top:2.5em;">
                     <h3 style="margin:.6em 0;">
                         <span style="vertical-align:middle;">${HeaderGuests}</span>
-                        <a class="btnInvite" data-role="button" data-icon="plus" href="#" data-rel="popup" data-position-to="window" data-inline="true" data-mini="true" data-iconpos="notext" style="margin: 0 0 0 .5em; vertical-align:middle;">
-                            ${ButtonInviteUser}
-                        </a>
+                        <paper-fab class="btnInvite mini" icon="add" title="${ButtonInviteUser}" style="margin-left:1em;"></paper-fab>
                     </h3>
                 </div>
                 <div class="connectUsers" style="text-align:left;margin-top:.5em;"></div>
